--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,35 @@
 {%extends "layout.html" %}
+
+{%block leftside %}
+  <h1>Syzygy endgame tablebases</h1>
+
+  <form>
+    <div class="input-group">
+      <input id="fen" type="text" name="fen" value="{{ fen }}" class="form-control" aria-label="FEN" placeholder="4k3/8/8/8/8/8/8/4K3 w - - 0 1">
+      <span class="input-group-btn">
+        <input type="submit" class="btn btn-default" value="Set FEN">
+      </span>
+  </form>
+{%endblock %}
+
+{%block rightside %}
+  <h2>{{ status }}</h2>
+
+  <div id="winning" class="list-group white-win">
+    {% for move in winning_moves %}
+      <a class="list-group-item" href="/?fen={{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+    {% endfor %}
+  </div>
+
+  <div id="drawing" class="list-group">
+    {% for move in drawing_moves %}
+      <a class="list-group-item" href="/?fen={{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+    {% endfor %}
+  </div>
+
+  <div id="losing" class="list-group">
+    {% for move in losing_moves %}
+      <a class="list-group-item" href="/?fen={{ move.fen }}">{{ move.san }} <span class="badge">{{ move.badge }}</span></a>
+    {% endfor %}
+  </div>
+{%endblock %}
