--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
       <span class="input-group-btn">
         <input type="submit" class="btn btn-default" value="Set FEN">
       </span>
+    </div>
   </form>
 {%endblock %}
 
