--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>{%block title %}Syzygy endgame tablebases{%endblock%}</title>
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/chessboard-0.3.0.min.css">
     <link rel="stylesheet" href="/static/style.css">
+    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="/static/chessboard-0.3.0.min.js"></script>
+    <script src="/static/script.js"></script>
   </head>
   <body>
     <div class="content">
