--- a/static/style.css
+++ b/static/style.css
@@ -120,6 +120,16 @@ footer > .inner {
   }
 }
 
+@media(min-width: 600px) and (max-height: 800px) {
+  h1 {
+    padding: 10px 0;
+  }
+
+  footer > .inner {
+    bottom: 10px;
+  }
+}
+
 @media(min-width: 600px) and (max-height: 700px) {
   footer {
     display: none;
