--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,5 @@
+/* General */
+
 body {
   margin: 0;
   padding: 0;
@@ -65,6 +67,8 @@ footer > .inner {
 #board {
   margin: 10px 0;
 }
+
+/* Device size specifics */
 
 @media(min-width: 600px) {
   .content {
@@ -141,5 +145,49 @@ footer > .inner {
   h1, footer, .fork-me {
     display: none;
     visibility: hidden;
+  }
+}
+
+/* Loading spinner */
+
+.spinner {
+  width: 40px;
+  height: 40px;
+
+  position: relative;
+  margin: 100px auto;
+}
+
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #333;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  -webkit-animation: bounce 2.0s infinite ease-in-out;
+  animation: bounce 2.0s infinite ease-in-out;
+}
+
+.double-bounce2 {
+  -webkit-animation-delay: -1.0s;
+  animation-delay: -1.0s;
+}
+
+@-webkit-keyframes bounce {
+  0%, 100% { -webkit-transform: scale(0.0) }
+  50% { -webkit-transform: scale(1.0) }
+}
+
+@keyframes bounce {
+  0%, 100% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 50% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
   }
 }
