--- a/static/style.css
+++ b/static/style.css
@@ -11,6 +11,11 @@ h1 {
   padding: 1em 0;
 }
 
+h1 a, h1 a:hover {
+  color: black;
+  text-decoration: none;
+}
+
 h2 {
   margin: 1em 0;
   border: 1px solid black;
