Fix typo: Minmaximg -> Minmaxing

--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
     {% if fen == DEFAULT_FEN %}
       <p>Syzygy tablebases provide win-draw-loss and distance-to-zero information
         for all endgame positions with up to 6 pieces.</p>
-      <p>Minmaximg the DTZ values guarantees winning all winning positions and
+      <p>Minmaxing the DTZ values guarantees winning all winning positions and
         defending all drawn positions.</p>
       <p><strong>Setup a position on the board to probe the tablebases.</strong></p>
     {% elif illegal %}
