--- a/static/style.css
+++ b/static/style.css
@@ -127,6 +127,10 @@ footer > .inner {
   footer > .inner {
     margin: auto;
   }
+
+  .fork-me {
+    position: absolute;
+  }
 }
 
 @media(min-width: 600px) and (max-height: 800px) {
