--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,26 @@
     <noscript>JavaScript required for interactive board view.</noscript>
   </div>
 
+  <div id="board-toolbar" role="toolbar">
+    <div class="btn-group">
+      <button id="btn-flip-board" type="button" class="btn btn-default" aria-label="Flip board" title="Flip board">
+        <span class="glyphicon glyphicon-refresh" aria-hidden="true"></span>
+      </button>
+    </div>
+
+    <div class="btn-group">
+      <button type="button" class="btn btn-default" aria-label="Swap colors" title="Swap colors">
+        <span class="glyphicon glyphicon-adjust" aria-hidden="true"></span>
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Mirror horizontally" title="Mirror horizontally">
+        <span class="glyphicon glyphicon-resize-horizontal" aria-hidden="true"></span>
+      </button>
+      <button type="button" class="btn btn-default" aria-label="Mirror verticaally" title="Mirror vertically">
+        <span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>
+      </button>
+    </div>
+  </div>
+
   <form id="form-set-fen" action="/" method="get">
     <div class="input-group">
       <input id="fen" type="text" name="fen" value="{{ fen_input }}" class="form-control" aria-label="FEN" placeholder="{{ DEFAULT_FEN }}">
