Implement swap colors on client side

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,9 +20,9 @@
     </div>
 
     <div class="btn-group">
-      <button type="button" class="btn btn-default" aria-label="Swap colors" title="Swap colors">
+      <a id="btn-swap-colors" href="" class="btn btn-default" aria-label="Swap colors" title="Swap colors">
         <span class="glyphicon glyphicon-adjust" aria-hidden="true"></span>
-      </button>
+      </a>
       <button type="button" class="btn btn-default" aria-label="Mirror horizontally" title="Mirror horizontally">
         <span class="glyphicon glyphicon-resize-horizontal" aria-hidden="true"></span>
       </button>
