Implement vertical mirroring

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,15 +20,15 @@
     </div>
 
     <div class="btn-group">
-      <a id="btn-swap-colors" href="" class="btn btn-default" aria-label="Swap colors" title="Swap colors">
+      <a id="btn-swap-colors" href="" class="btn btn-default" title="Swap colors">
         <span class="glyphicon glyphicon-adjust" aria-hidden="true"></span>
       </a>
-      <button type="button" class="btn btn-default" aria-label="Mirror horizontally" title="Mirror horizontally">
+      <a id="btn-mirror-horizontal" href="" class="btn btn-default" title="Mirror horizontally">
         <span class="glyphicon glyphicon-resize-horizontal" aria-hidden="true"></span>
-      </button>
-      <button type="button" class="btn btn-default" aria-label="Mirror verticaally" title="Mirror vertically">
+      </a>
+      <a id="btn-mirror-vertical" href="" class="btn btn-default" title="Mirror vertically">
         <span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>
-      </button>
+      </a>
     </div>
   </div>
 
