Implement mirroring on server side

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,10 +23,10 @@
       <a id="btn-swap-colors" href="" class="btn btn-default" title="Swap colors">
         <span class="glyphicon glyphicon-adjust" aria-hidden="true"></span>
       </a>
-      <a id="btn-mirror-horizontal" href="" class="btn btn-default" title="Mirror horizontally">
+      <a id="btn-mirror-horizontal" href="/?fen={{ horizontal_fen }}" class="btn btn-default" title="Mirror horizontally">
         <span class="glyphicon glyphicon-resize-horizontal" aria-hidden="true"></span>
       </a>
-      <a id="btn-mirror-vertical" href="" class="btn btn-default" title="Mirror vertically">
+      <a id="btn-mirror-vertical" href="/?fen={{ vertical_fen }}" class="btn btn-default" title="Mirror vertically">
         <span class="glyphicon glyphicon-resize-vertical" aria-hidden="true"></span>
       </a>
     </div>
