Implement color swapping on server side

--- a/templates/index.html
+++ b/templates/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div class="btn-group">
-      <a id="btn-swap-colors" href="" class="btn btn-default" title="Swap colors">
+      <a id="btn-swap-colors" href="/?fen={{ swapped_fen }}" class="btn btn-default" title="Swap colors">
         <span class="glyphicon glyphicon-adjust" aria-hidden="true"></span>
       </a>
       <a id="btn-mirror-horizontal" href="/?fen={{ horizontal_fen }}" class="btn btn-default" title="Mirror horizontally">
