--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/chessboard-0.3.0.min.css">
     <link rel="stylesheet" href="/static/style.css">
-    <script src="//code.jquery.com/jquery-2.1.3.min.js"></script>
+    <script src="/static/jquery-2.1.3.min.js"></script>
     <script src="/static/chessboard-0.3.0.min.js"></script>
     <script src="/static/chess.min.js"></script>
     <script src="/static/script.js"></script>
