--- a/templates/layout.html
+++ b/templates/layout.html
@@ -11,7 +11,7 @@
     <script src="/static/jquery-2.1.3.min.js"></script>
     <script src="/static/chessboard-0.3.0.min.js"></script>
     <script src="/static/chess.min.js"></script>
-    <script src="/static/script.js"></script>
+    <script src="/static/client.js"></script>
   </head>
   <body>
     <div class="content">
