Add more margin for side-to-move

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 {%block leftside %}
   <h1><a href="/">Syzygy endgame tablebases</a></h1>
 
-  <div class="btn-group" role="group" aria-label="Side to move">
+  <div id="side-to-move" class="btn-group" role="group" aria-label="Side to move">
     <a id="btn-white" class="btn btn-default{% if turn == "white" %} active{% endif %}" href="/?fen={{ white_fen }}">White to move</a>
     <a id="btn-black" class="btn btn-default{% if turn == "black" %} active{% endif %}" href="/?fen={{ black_fen }}">Black to move</a>
   </div>
