--- a/static/style.css
+++ b/static/style.css
@@ -142,7 +142,7 @@ footer > .inner {
   }
 }
 
-@media(min-width: 600px) and (max-height: 810px) {
+@media(min-width: 600px) and (max-height: 820px) {
   h1 {
     padding: 10px 0;
   }
@@ -152,7 +152,7 @@ footer > .inner {
   }
 }
 
-@media(min-width: 600px) and (max-height: 720px) {
+@media(min-width: 600px) and (max-height: 730px) {
   footer {
     display: none;
     visibility: hidden;
@@ -163,6 +163,10 @@ footer > .inner {
   h1, footer, .fork-me {
     display: none;
     visibility: hidden;
+  }
+
+  #side-to-move {
+    margin-top: 10px;
   }
 }
 
