Add API documentation

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -5,9 +5,9 @@
 {% block leftside %}
   <h1>Legal</h1>
 
-  <p><em>German law demands this</em></p>
+  <p><em>German law demands this.</em></p>
 
-  <div class="reload"><a class="btn btn-default" href="/">Back to home</a></div>
+  <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
 {% endblock %}
 
 {% block rightside %}
