--- a/static/style.css
+++ b/static/style.css
@@ -16,6 +16,11 @@ h1 a, h1 a:hover {
   text-decoration: none;
 }
 
+h2 a, h2 a:hover {
+  color: white;
+  text-decoration: none;
+}
+
 h2 {
   margin: 1em 0;
   border: 1px solid black;
