--- a/templates/legal.html
+++ b/templates/legal.html
@@ -25,9 +25,17 @@
     <br>38678 Clausthal-Zellerfeld
   </p>
 
-  <h2>Privacy policy</h2>
+  <h2>Privacy policy / Datenschutzerklärung</h2>
 
-  TODO
+  <em>Informal: There are server logs.</em>
+
+  <h3>Zugriffsdaten und Server-Logfiles</h3>
+  <p>Der Anbieter (beziehungsweise sein Webspace-Provider) erhebt Daten über jeden Zugriff auf das Angebot (so genannte Serverlogfiles). Zu den Zugriffsdaten gehören:</p>
+  <p>Name der abgerufenen Webseite, Datei, Datum und Uhrzeit des Abrufs, übertragene Datenmenge, Meldung über erfolgreichen Abruf, Browsertyp nebst Version, das Betriebssystem des Nutzers, Referrer URL (die zuvor besuchte Seite), IP-Adresse und der anfragende Provider.<p>
+  <p>Der Anbieter verwendet die Protokolldaten nur für statistische Auswertungen zum Zweck des Betriebs, der Sicherheit und der Optimierung des Angebotes. Der Anbieterbehält sich jedoch vor, die Protokolldaten nachträglich zu überprüfen, wenn aufgrund konkreter Anhaltspunkte der berechtigte Verdacht einer rechtswidrigen Nutzung besteht.</p>
+
+  <h3>Kontaktaufnahme</h3>
+  <p>Bei der Kontaktaufnahme mit dem Anbieter (zum Beispiel per E-Mail) werden die Angaben des Nutzers zwecks Bearbeitung der Anfrage sowie für den Fall, dass Anschlussfragen entstehen, gespeichert.</p>
 
   <h2>Software licenses</h2>
 
