--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="/static/bootstrap.min.css">
     <link rel="stylesheet" href="/static/chessboard-0.3.0.min.css">
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="author" title="Legal" href="/legal">
     <script src="/static/jquery-2.1.3.min.js"></script>
     <script src="/static/chessboard-0.3.0.min.js"></script>
     <script src="/static/chess.min.js"></script>
