Use a much smaller SVG for triangle-bg.png

--- a/static/style.css
+++ b/static/style.css
@@ -138,7 +138,7 @@ footer > .inner {
   }
 
   .left-side {
-    background: #fff url('/static/triangle-bg.png');
+    background: #fff url('/static/triangle-bg.svg');
     background-position: center bottom;
     margin: auto;
   }
