Add note about getting tablebase files

--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -52,4 +52,8 @@
   <p>If the move is <strong>winning</strong> (DTZ of opponent < 0) play it.</p>
   <p>If the move is a <strong>stalemate or draw by insufficient material or a draw</strong> (DTZ 0) play it.</p>
   <p>A <strong>losing</strong> move is forced. Maximize the DTZ of your opponent.</p>
+
+  <h2><a>Getting local tablebase files</a></h2>
+
+  <a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It might be easier to <a href="http://oics.olympuschess.com/tracker/index.php">download the tablebases</a> (combined size about 150GB) with a fast internet connection.
 {% endblock %}
