--- a/templates/layout.html
+++ b/templates/layout.html
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href="/static/style.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="author" title="Legal" href="/legal">
-    <script src="/static/jquery-2.1.3.min.js"></script>
-    <script src="/static/chessboard-0.3.0.min.js"></script>
-    <script src="/static/chess.min.js"></script>
-    <script src="/static/client.js"></script>
+    <script src="/static/client.min.js"></script>
   </head>
   <body>
     <div class="content">
