Minify CSS using Grunt

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,9 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
     <title>{%block title %}Syzygy endgame tablebases{%endblock%}</title>
-    <link rel="stylesheet" href="/static/bootstrap.min.css">
-    <link rel="stylesheet" href="/static/chessboard-0.3.0.min.css">
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/style.min.css">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="author" title="Legal" href="/legal">
     <script src="/static/client.min.js"></script>
