--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,12 +2,15 @@
 
 <html lang="en">
   <head>
+    <title>{%block title %}Syzygy endgame tablebases{%endblock%}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
-    <title>{%block title %}Syzygy endgame tablebases{%endblock%}</title>
+    <meta name="keywords" content="Syzygy,chess,endgame,tablebase">
+    <meta name="description" content="User interface and public API for probing Syzygy endgame tablebases">
+    <meta name="author" content="Niklas Fiekas">
     <link rel="stylesheet" href="/static/style.min.css">
-    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="author" title="Legal" href="/legal">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <script src="/static/client.min.js"></script>
   </head>
   <body>
