syzygy-tables.org -> syzygy-tables.info

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -29,14 +29,14 @@
         <div class="inner">
           {%block footer %}
             <p>Powered by Ronald de Man's <a href="https://github.com/syzygy1/tb">Syzygy endgame tablebases</a>, <a href="https://github.com/niklasf/python-chess">python-chess</a> for probing and <a href="http://chessboardjs.com">chessboard.js</a> and <a href="https://github.com/jhlywa/chess.js">chess.js</a> for the client.</p>
-            <p><a href="/legal">Legal</a>. <a href="/apidoc">Public API</a>. <a href="https://github.com/niklasf/syzygy-tables.org">GitHub</a>.</p>
+            <p><a href="/legal">Legal</a>. <a href="/apidoc">Public API</a>. <a href="https://github.com/niklasf/syzygy-tables.info">GitHub</a>.</p>
           {%endblock%}
         </div>
       </footer>
     </div>
 
     {%block forkme %}
-      <a class="fork-me" href="https://github.com/niklasf/syzygy-tables.org"><img style="position: fixed; top: 0; right: 0; border: 0;" src="/static/fork-me.png" alt="Fork me on GitHub" width="149" height="149"></a>
+      <a class="fork-me" href="https://github.com/niklasf/syzygy-tables.info"><img style="position: fixed; top: 0; right: 0; border: 0;" src="/static/fork-me.png" alt="Fork me on GitHub" width="149" height="149"></a>
     {%endblock%}
   </body>
 </html>
