--- a/templates/legal.html
+++ b/templates/legal.html
@@ -39,7 +39,7 @@
 
   <h2>Software licenses</h2>
 
-  <p>This website itself <a href="https://github.com/niklasf/syzygy-tables.org/blob/master/LICENSE">is licensed under the GPLv3</a>. It also uses the following software:</p>
+  <p>This website itself <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">is licensed under the GPLv3</a>. It also uses the following software:</p>
 
   <ul>
     <li><a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">python-chess under GPLv3</a></li>
