Add link to Tornado

--- a/templates/legal.html
+++ b/templates/legal.html
@@ -48,5 +48,6 @@
     <li><a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">Bootstrap under MIT</a></li>
     <li><a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">jQuery under MIT</a></li>
     <li><a href="http://flask.pocoo.org/docs/0.10/license/">Flask under BSD</a></li>
+    <li><a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Tornado under the Apache License Version 2.0</a></li>
   </ul>
 {% endblock %}
