Add sample positions and contact to start page

--- a/templates/index.html
+++ b/templates/index.html
@@ -52,6 +52,17 @@
       <p>Minmaxing the DTZ values guarantees winning all winning positions and
         defending all drawn positions.</p>
       <p><strong>Setup a position on the board to probe the tablebases.</strong></p>
+
+      <p>Sample positions:</p>
+
+      <ul>
+        <li><a href="/?fen=6N1/5KR1/2n5/8/8/8/2n5/1k6%20w%20-%20-%200%201">The longest six piece endgame</a></li>
+        <li><a href="/?fen=4r3/1K6/8/8/5p2/3k4/8/7Q%20b%20-%20-%200%201">Black is just about saved by the fifty-move rule in this KQvKRP endgame</a></li>
+      </ul>
+
+      <h2>Contact</h2>
+
+      <p>Feedback <a href="/legal">via mail</a>, bug reports and <a href="https://github.com/niklasf/syzygy-tables.info">pull requests</a> are welcome.</p>
     {% elif illegal %}
       <p>The given position is not a legal chess position.</p>
     {% elif insufficient_material %}
