Escape less-than in API docs

--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -49,8 +49,8 @@
   <p><em>Some additional logic is required to order moves by DTZ optimality, other than looking at the DTZ values.</em></p>
 
   <p>If the move is a <strong>checkmate</strong> play it.</p>
-  <p>If the move is <strong>a capture or pawn move</strong> and maintains a winning position (DTZ of opponent < 0) play it.</p>
-  <p>If the move is <strong>winning</strong> (DTZ of opponent < 0) play it.</p>
+  <p>If the move is <strong>a capture or pawn move</strong> and maintains a winning position (DTZ of opponent &lt; 0) play it.</p>
+  <p>If the move is <strong>winning</strong> (DTZ of opponent &lt; 0) play it.</p>
   <p>If the move is a <strong>stalemate or draw by insufficient material or a draw</strong> (DTZ 0) play it.</p>
   <p>A <strong>losing</strong> move is forced. Maximize the DTZ of your opponent.</p>
 
