--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block rightside %}
-  <h2>JSON and JSONP</h2>
+  <h2 id="json">JSON and JSONP</h2>
   <div class="panel panel-default">
     <div class="panel-heading">
       <p>GET <a href="/api?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1">/api?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1</a></p>
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <h2><a name="ordering">Ordering moves</a></h2>
+  <h2 id="ordering">Ordering moves</h2>
 
   <p><em>Some additional logic is required to order moves by DTZ optimality, other than looking at the DTZ values.</em></p>
 
@@ -54,7 +54,7 @@
   <p>If the move is a <strong>stalemate or draw by insufficient material or a draw</strong> (DTZ 0) play it.</p>
   <p>A <strong>losing</strong> move is forced. Maximize the DTZ of your opponent.</p>
 
-  <h2><a>Getting local tablebase files</a></h2>
+  <h2 id="download">Getting local tablebase files</h2>
 
   <a href="https://github.com/syzygy1/tb">Generating</a> the tablebases requires time and resources. It might be easier to <a href="http://oics.olympuschess.com/tracker/index.php">download the tablebases</a> (combined size about 150GB) with a fast internet connection.
 {% endblock %}
