--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -16,7 +16,7 @@
     <div class="panel-heading">
       <p>GET <a href="/api?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1">/api?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1</a></p>
       <p>Required <code>fen</code>.</p>
-      <p><a href="https://en.wikipedia.org/wiki/Cross-origin_resource_sharing">CORS</a> is supported.</a>
+      <p><a href="https://en.wikipedia.org/wiki/Cross-origin_resource_sharing">CORS</a> is supported.</p>
       <p>Optional <code>callback</code> for JSONP.</p>
     </div>
     <div class="panel-body">
