--- a/templates/apidoc.html
+++ b/templates/apidoc.html
@@ -7,14 +7,14 @@
 
   <em>This public API is available for free and provided without any guarantees on a best-effort basis.</em>
 
-  <div class="reload"><a class="btn btn-default" href="/?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1">Back to board</a></div>
+  <div class="reload"><a class="btn btn-default" href="/?fen=4k3/1P6/7K/8/4n3/8/8/8%20w%20-%20-%201%201">Back to board</a></div>
 {% endblock %}
 
 {% block rightside %}
   <h2 id="json">JSON and JSONP</h2>
   <div class="panel panel-default">
     <div class="panel-heading">
-      <p>GET <a href="/api?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1">/api?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1</a></p>
+      <p>GET <a href="/api?fen=4k3/1P6/7K/8/4n3/8/8/8%20w%20-%20-%201%201">/api?fen=4k3/1P6/7K/8/4n3/8/8/8 w - - 1 1</a></p>
       <p>Required <code>fen</code>.</p>
       <p><a href="https://en.wikipedia.org/wiki/Cross-origin_resource_sharing">CORS</a> is supported.</p>
       <p>Optional <code>callback</code> for JSONP.</p>
