--- a/templates/legal.html
+++ b/templates/legal.html
@@ -13,7 +13,7 @@
 
   <p>
     <a href="mailto:niklas.fiekas@tu-clausthal.de">niklas.fiekas@tu-clausthal.de</a>
-    (<a href="https://hkps.pool.sks-keyservers.net/pks/lookup?op=get&search=0x2ECA66C65B255138">OpenPGP</a>)
+    (<a href="https://hkps.pool.sks-keyservers.net/pks/lookup?op=get&amp;search=0x2ECA66C65B255138">OpenPGP</a>)
   </p>
 
   <h2>Imprint</h2>
