Organize static resources

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block head %}
-<script src="/static/client.min.js"></script>
+<script src="/static/js/client.min.js"></script>
 <meta name="description" content="User interface and public API for probing Syzygy endgame tablebases">
 {% endblock %}
 
