--- a/templates/legal.html
+++ b/templates/legal.html
@@ -5,51 +5,61 @@
 {% block leftside %}
   <h1>Legal</h1>
 
-  <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
+  <nav>
+    <div class="reload"><a class="btn btn-default" href="/">Back to board</a></div>
+  </nav>
 {% endblock %}
 
 {% block rightside %}
-  <h2>Contact</h2>
+  <section id="contact">
+    <h2>Contact</h2>
 
-  <p>
-    <a href="mailto:niklas.fiekas@tu-clausthal.de">niklas.fiekas@tu-clausthal.de</a>
-    (<a href="https://hkps.pool.sks-keyservers.net/pks/lookup?op=get&amp;search=0x2ECA66C65B255138">OpenPGP</a>)
-  </p>
+    <p>
+      <a href="mailto:niklas.fiekas@tu-clausthal.de">niklas.fiekas@tu-clausthal.de</a>
+      (<a href="https://hkps.pool.sks-keyservers.net/pks/lookup?op=get&amp;search=0x2ECA66C65B255138">OpenPGP</a>)
+    </p>
+  </section>
 
-  <h2>Imprint</h2>
+  <section id="imprint">
+    <h2>Imprint</h2>
 
-  <p><em>German law demands this.</em></p>
+    <p><em>German law demands this.</em></p>
 
-  <p>Niklas Fiekas
-    <br>Reichenberger Straße 3
-    <br>38678 Clausthal-Zellerfeld
-  </p>
+    <p>Niklas Fiekas
+      <br>Reichenberger Straße 3
+      <br>38678 Clausthal-Zellerfeld
+    </p>
+  </section>
 
-  <h2>Privacy policy / <span lang="de">Datenschutzerklärung</span></h2>
+  <section id="privacy">
+    <h2>Privacy policy / <span lang="de">Datenschutzerklärung</span></h2>
 
-  <em>Informal: There are server logs.</em>
+    <em>Informal: There are server logs.</em>
 
-  <div lang="de">
-    <h3>Zugriffsdaten und Server-Logfiles</h3>
-    <p>Der Anbieter (beziehungsweise sein Webspace-Provider) erhebt Daten über jeden Zugriff auf das Angebot (so genannte Serverlogfiles). Zu den Zugriffsdaten gehören:</p>
-    <p>Name der abgerufenen Webseite, Datei, Datum und Uhrzeit des Abrufs, übertragene Datenmenge, Meldung über erfolgreichen Abruf, Browsertyp nebst Version, das Betriebssystem des Nutzers, Referrer URL (die zuvor besuchte Seite), IP-Adresse und der anfragende Provider.<p>
-    <p>Der Anbieter verwendet die Protokolldaten nur für statistische Auswertungen zum Zweck des Betriebs, der Sicherheit und der Optimierung des Angebotes. Der Anbieterbehält sich jedoch vor, die Protokolldaten nachträglich zu überprüfen, wenn aufgrund konkreter Anhaltspunkte der berechtigte Verdacht einer rechtswidrigen Nutzung besteht.</p>
+    <div lang="de">
+      <h3>Zugriffsdaten und Server-Logfiles</h3>
+      <p>Der Anbieter (beziehungsweise sein Webspace-Provider) erhebt Daten über jeden Zugriff auf das Angebot (so genannte Serverlogfiles). Zu den Zugriffsdaten gehören:</p>
+      <p>Name der abgerufenen Webseite, Datei, Datum und Uhrzeit des Abrufs, übertragene Datenmenge, Meldung über erfolgreichen Abruf, Browsertyp nebst Version, das Betriebssystem des Nutzers, Referrer URL (die zuvor besuchte Seite), IP-Adresse und der anfragende Provider.<p>
+      <p>Der Anbieter verwendet die Protokolldaten nur für statistische Auswertungen zum Zweck des Betriebs, der Sicherheit und der Optimierung des Angebotes. Der Anbieterbehält sich jedoch vor, die Protokolldaten nachträglich zu überprüfen, wenn aufgrund konkreter Anhaltspunkte der berechtigte Verdacht einer rechtswidrigen Nutzung besteht.</p>
 
-    <h3>Kontaktaufnahme</h3>
-    <p>Bei der Kontaktaufnahme mit dem Anbieter (zum Beispiel per E-Mail) werden die Angaben des Nutzers zwecks Bearbeitung der Anfrage sowie für den Fall, dass Anschlussfragen entstehen, gespeichert.</p>
-  </div>
+      <h3>Kontaktaufnahme</h3>
+      <p>Bei der Kontaktaufnahme mit dem Anbieter (zum Beispiel per E-Mail) werden die Angaben des Nutzers zwecks Bearbeitung der Anfrage sowie für den Fall, dass Anschlussfragen entstehen, gespeichert.</p>
+    </div>
+  </section>
 
-  <h2>Software licenses</h2>
+  <section id="thanks">
+    <h2>Software licenses</h2>
 
-  <p>This website itself <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">is licensed under the GPLv3</a>. It also uses the following software:</p>
+    <p>This website itself <a href="https://github.com/niklasf/syzygy-tables.info/blob/master/LICENSE">is licensed under the GPLv3</a>. It also uses the following software:</p>
 
-  <ul>
-    <li><a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">python-chess under GPLv3</a></li>
-    <li><a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE">chessboard.js under MIT</a></li>
-    <li><a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">chess.js under MIT</a></li>
-    <li><a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">Bootstrap under MIT</a></li>
-    <li><a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">jQuery under MIT</a></li>
-    <li><a href="http://flask.pocoo.org/docs/0.10/license/">Flask under BSD</a></li>
-    <li><a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Tornado under the Apache License Version 2.0</a></li>
-  </ul>
+    <ul>
+      <li><a href="https://github.com/niklasf/python-chess/blob/master/LICENSE">python-chess under GPLv3</a></li>
+      <li><a href="https://github.com/oakmac/chessboardjs/blob/master/LICENSE">chessboard.js under MIT</a></li>
+      <li><a href="https://github.com/jhlywa/chess.js/blob/master/LICENSE">chess.js under MIT</a></li>
+      <li><a href="https://github.com/twbs/bootstrap/blob/master/LICENSE">Bootstrap under MIT</a></li>
+      <li><a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">jQuery under MIT</a></li>
+      <li><a href="http://flask.pocoo.org/docs/0.10/license/">Flask under BSD</a></li>
+      <li><a href="https://github.com/tornadoweb/tornado/blob/master/LICENSE">Tornado under the Apache License Version 2.0</a></li>
+    </ul>
+  </section>
 {% endblock %}
